--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "coveralls": "^3.0.2",
     "jest": "^23.6.0",
     "npm-check": "^5.8.0",
+    "prettier": "1.15.3",
+    "prettier-config-ackee": "0.0.11",
     "ts-jest": "^23.10.4",
     "tslint-config-ackee": "^0.2.1",
     "tslint-consistent-codestyle": "^1.14.1",
