--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,5 +1,5 @@
 {
     "hooks": {
-        "pre-commit": "npm test && pretty-quick --staged && npm run lint"
+        "pre-commit": "npm test -- --ci && pretty-quick --staged && npm run lint -- --fix"
     }
 }
