--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
+    "@types/supertest": "^2.0.7",
+    "body-parser": "^1.18.3",
     "coveralls": "^3.0.2",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
@@ -36,6 +38,7 @@
     "prettier": "1.15.3",
     "prettier-config-ackee": "0.0.11",
     "pretty-quick": "^1.8.0",
+    "supertest": "^3.3.0",
     "ts-jest": "^23.10.4",
     "tslint-config-ackee": "^0.2.1",
     "tslint-consistent-codestyle": "^1.14.1",
