--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "keywords": [],
   "scripts": {
     "build": "tsc",
-    "test": "NODE_PATH=src jest",
+    "test": "NODE_PATH=src jest --detectOpenHandles --forceExit",
     "test:coverage": "npm run test -- --collectCoverage",
     "test:coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "lint": "tslint -t codeFrame -p .",
@@ -43,6 +43,6 @@
     "tslint-config-ackee": "^0.2.1",
     "tslint-consistent-codestyle": "^1.14.1",
     "typedoc": "^0.13.0",
-    "typescript": "^3.1.2"
+    "typescript": "^3.2.2"
   }
 }
