--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "NODE_PATH=src jest --detectOpenHandles --forceExit",
+    "test": "NODE_PATH=src jest",
     "test:coverage": "npm run test -- --collectCoverage",
     "test:coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "lint": "tslint -t codeFrame -p .",
