--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "description": "Tool for developing generic service layer for RESTful CRUD API in your Node.js backend application",
     "version": "0.3.1",
     "author": "Jaroslav Šmolík <grissius@gmail.com>",
+    "contributors": [
+        "Jaroslav Šmolík <grissius@gmail.com>",
+        "Michal Vlasák <michal.vlasak@ackee.cz>"
+    ],
     "main": "./dist/main.js",
     "engines": {
         "node": "^10.14.0"
@@ -23,9 +27,6 @@
         "nodejs",
         "service",
         "abstraction"
-    ],
-    "contributors": [
-        "Jaroslav Šmolík <grissius@gmail.com>"
     ],
     "scripts": {
         "build": "tsc",
