--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@types/express": "^4.16.0",
+    "@types/express-serve-static-core": "^4.16.1",
     "express": "^4.16.4"
   },
   "devDependencies": {
