--- a/package.json
+++ b/package.json
@@ -50,13 +50,13 @@
     "coveralls": "^3.0.2",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
+    "lint-staged": "^8.1.3",
     "npm-check": "^5.8.0",
     "prettier": "1.15.3",
     "prettier-config-ackee": "0.0.13",
-    "pretty-quick": "^1.8.0",
     "supertest": "^3.3.0",
     "ts-jest": "^23.10.4",
-    "tslint-config-ackee": "^0.2.1",
+    "tslint-config-ackee": "^0.2.5",
     "tslint-consistent-codestyle": "^1.14.1",
     "typedoc": "^0.13.0",
     "typescript": "^3.2.2"
