--- a/package.json
+++ b/package.json
@@ -39,27 +39,28 @@
     "check": "npm-check -i app -i errors -i config -i index & exit 0"
   },
   "dependencies": {
-    "@types/express": "^4.16.0",
-    "@types/express-serve-static-core": "^4.16.1",
+    "@types/express": "^4.17.8",
+    "@types/express-serve-static-core": "^4.17.13",
+    "@types/lodash": "^4.14.162",
     "express": "^4.16.4"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.12",
-    "@types/supertest": "^2.0.7",
+    "@types/jest": "^26.0.14",
+    "@types/supertest": "^2.0.10",
     "body-parser": "^1.18.3",
     "coveralls": "^3.0.2",
-    "husky": "^2.2.0",
-    "jest": "^24.8.0",
-    "lint-staged": "^8.1.3",
+    "husky": "^4.3.0",
+    "jest": "^26.5.3",
+    "lint-staged": "^10.4.0",
     "npm-check": "^5.8.0",
-    "prettier": "1.15.3",
-    "prettier-config-ackee": "0.0.13",
-    "supertest": "^4.0.2",
-    "ts-jest": "^24.0.2",
+    "prettier": "^2.1.2",
+    "prettier-config-ackee": "0.0.14",
+    "supertest": "^5.0.0",
+    "ts-jest": "^26.4.1",
     "tslint-config-ackee": "^0.3.0",
     "tslint-consistent-codestyle": "^1.14.1",
     "tslint-sonarts": "^1.9.0",
-    "typedoc": "^0.14.2",
-    "typescript": "^3.4.5"
+    "typedoc": "^0.19.2",
+    "typescript": "^4.0.3"
   }
 }
